--- a/计算机网络/计算机网络的体系结构.md
+++ b/计算机网络/计算机网络的体系结构.md
@@ -1,1 +1,115 @@
+# 计算机网络的体系结构
+## 计算机网络的概念
+一般认为，计算机网络是一个将分散，具有独立功能的的计算机系统，通过通信设备与线路连接起来，由功能完善的软件实现资源共享和信息传递的系统。  
++ 广义观点   
+只要是能实现远程信息处理的系统或能进一步达到资源共享的系统，都是计算机网络。   
++ 资源共享观点   
+以能够相互共享资源的方式互连起来的自治计算机系统的集合。   
+三层含义：
+    1. 目的：资源共享
+    2. 组成单元：分布在不同地理位置的多台“自治计算机”
+    3. 网络中的的计算机必须遵守统一规则－网络协议。
+    
++ 用户透明性观点   
+存在一个能为用户自动管理资源的网络操作系统，他能够调用用户所需要的资源，而整个网络就像一个大的计算机系统一样对用户是透明的。   
+## 计算机网络的组成
+1. 从组成部分上看，一个完整的计算机网络主要由硬件，软件，协议三大部分组成。   
+硬件主要由主机，通信链路，交换设备，通信处理机组成。  
+软件主要包括各种实现资源共享的软件和方便用户使用的各种工具软件。   
+2. 从工作方式上看，计算机网络（这里指因特网）可分为边缘部分和核心部分。   
+```mermaid
+graph LR;
+subgraph 因特网
+  subgraph 边缘部分
+  核心部分
+  end
+end
+```
+3. 从功能上看，计算机网络分为通信子网和资源子网。  
+通信子网：各种传输介质，通信设备和相应的网络协议组成，**主要实现联网计算机之间的数据通信。**   
+资源子网：实现资源共享功能的设备及其软件的集合。   
+## 计算机网络的功能
+1. 设备通信
+2. 资源共享
+3. 分布式处理
+4. 提高可靠性
+5. 负载均衡
 
+## 计算机网络的分类
++ 按分布范围分类  
+  1. 广域网：**因特网的核心部分，使用交换技术**,有较大的通信容量。  
+  2. 城域网：**采用以太网技术**
+  3. 局域网：**使用广播技术**
+  4. 个人区域网：**用无线技术连接起的网络**  
+
++ 按传输技术分类   
+1. 广播式网络：所有计算机共享**一个公共通信信道**
+2. 点对点网络：每条物理线路**连接一对计算机。**
+
++ 按拓扑结构分类     
+是指网中节点（路由器，主机等）与通信线路（网线）之间的集合关系表示的网络结构，只要指**通信子网的拓扑结构。**  
+  1. 总线型网络
+  ```mermaid
+  graph LR;
+  主机1-->主机2-->主机3-->主机4-->....
+  ```
+  3. 星型网络
+  ```mermaid
+  graph TD;
+  主机1-->中心
+  主机2-->中心
+  主机3-->中心
+  主机4-->中心
+  主机5-->中心
+  ```
+  5. 环形网络
+  ```mermaid
+  graph LR;
+  主机1-->主机2-->主机3-->主机4-->主机5-->主机1
+  ```
+  7. 网状网络   
+   ```mermaid
+  graph LR;
+  主机1-->主机3
+  主机2-->主机4
+  主机3-->主机2
+  主机4-->主机3
+  主机4-->主机5
+  主机5-->主机1
+  ```
+
++ 按使用者分类   
+1. 共用网
+2. 专用网
+
++ 按交换技术分类   
+1. 电路交换技术   
+优点：数据直接传送，时延小。  
+缺点：线路利用率低，不能充分利用线路容量，不便于进行差错控制。   
+3. 报文交换技术   
+优点：可以较为充分地利用线路容量，可以实现不同链路之间不同数据传输速率的转换，可以实现格式转换，可以实现一对多，多对一的访问，可以差错控制。   
+缺点：增大资源开销（**辅助信息导致**），增加了缓冲时延。
+5. 分组交换技术   
+优点：缓冲易于管理；包的平均延时更小，网络占用的平均缓冲区更小，更抑郁标准化，更适合应用。   
++ 按传输介质分类   
+有限网络与无线网络。
+
+## 计算机网络的性能指标
++ 带宽   
+表示网络的通信线路所能传送数据的能力，是数字信道所能传送的“最高数据传输速率”的同义语。单位：“b/s”  
++ 时延   
+指数据从网络的一端传送到另一端所需要的时间。  
+1.发生时延 
+发送分组的第一个比特算起，到该分组的最后一个发送完毕所需的时间。  
+$$发送时延＝\frac{分组长度}{信道宽度}$$  
+2.传播时延  
+一个比特从链路的一端传播到另一端所需的时间。  
+$$传播时延＝\frac{信道长度}{电磁波在信道上的传播速率}$$
+3.处理时延  
+数据在交换节点为存储转发而进行的一些必要的处理所花费的时间。   
+4.排队时延  
+分组在进入路由器后要先在输入队列中排队等待处理。  
+5. 总时延
+$$总时延＝发生时延＋传播时延＋处理时延＋排队时延$$
++ 时延带宽积   
+$$ 时延带宽积＝传播时延 \times{通道带宽} $$
