Update and rename 计算机网络的体系结构.md to 计算机网络的体系结构－计算机网络概述.md

--- a/计算机网络/计算机网络的体系结构－计算机网络概述.md
+++ b/计算机网络/计算机网络的体系结构－计算机网络概述.md
@@ -1,4 +1,4 @@
-# 计算机网络的体系结构
+# 计算机网络的体系结构－计算机网络概述
 ## 计算机网络的概念
 一般认为，计算机网络是一个将分散，具有独立功能的的计算机系统，通过通信设备与线路连接起来，由功能完善的软件实现资源共享和信息传递的系统。  
 + 广义观点   
@@ -112,4 +112,11 @@ $$传播时延＝\frac{信道长度}{电磁波在信道上的传播速率}$$
 5. 总时延
 $$总时延＝发生时延＋传播时延＋处理时延＋排队时延$$
 + 时延带宽积   
-$$ 时延带宽积＝传播时延 \times{通道带宽} $$
+发送端发送的第一个比特即将到达终点时，发送端已经发出了多少个比特。   
+$$时延带宽积＝传播时延 \times 通道带宽$$
++ 往返时延  
++ 吞吐量
++ 速率
++ 通道利用率
+
+广播式网络不需要网络层，不存在路由选择的问题，但数据链路层使用物理层的服务必须通过访问访问点实现。  
