--- a/计算机网络/物理层-通信基础.md
+++ b/计算机网络/物理层-通信基础.md
@@ -1,5 +1,22 @@
 # 物理层－通信基础
 ## 基本概念
++ 数据，信号与码元   
 **数据**是传送消息的实体。**信号**是数据的电气或电磁表现，是数据在传输过程中的存在形式。   
-数据传输方式可以分为**串行传输**和**并行传输**。
-码元是指一个固定时长
+**数据**传输方式可以分为**串行传输**和**并行传输**。   
+**码元**是指一个固定时长的信号波形（数字脉冲）表示一位`k`为的数字，代表不同离散数值的基本波形，是数字通信中数字信号的计量单位，这个时长内的信号称为`k`进制**码元**。   
+该时长成为**码元宽度**。    
++ 信源，信道与信宿   
+**信源**是产生和发送数据的源头。信宿是接受数据的终点，它们通常都是计算机和其他数字终端装置。   
+**信道**与电路并不等同，信道是信号的传输媒介。一个信道可视为一条线路的逻辑部件，一般用来表示某个方向传送信息的介质，因此一条信道通常包含一条发送信道和一条接受信道。      
+交互方式：  
+1. 单向通信
+2. 半双工通信
+3. 全双工通信
++ 速率，波特与带宽   
+速率也称数据率，可以用码元传输速率和消息传输速率表示。  
+**码元传输速率**   
+波特率，单位时间内数字通信系统所传输的码元个数。（脉冲个数，信号变化次数）  
+**信息传输速率**   
+信息速率，比特率。他是单位时间内数字通信系统传输的二进制码元个数。   
+若一个码元携带n比特的信息量，这M 波特率的码元传输速率说对应的消息传输速率为
+$$Mn \ b/s$$
