--- a/计算机网络/物理层-通信基础.md
+++ b/计算机网络/物理层-通信基础.md
@@ -15,8 +15,80 @@
 + 速率，波特与带宽   
 速率也称数据率，可以用码元传输速率和消息传输速率表示。  
 **码元传输速率**   
-波特率，单位时间内数字通信系统所传输的码元个数。（脉冲个数，信号变化次数）  
+波特率，单位时间内数字通信系统所传输的码元个数。（脉冲个数，信号变化次数）单位`Baud`  
 **信息传输速率**   
-信息速率，比特率。他是单位时间内数字通信系统传输的二进制码元个数。   
+信息速率，比特率。他是单位时间内数字通信系统传输的二进制码元个数。      
 若一个码元携带n比特的信息量，这M 波特率的码元传输速率说对应的消息传输速率为
-$$Mn \ b/s$$
+$$Mn \ 比特/秒$$
+带宽常用来表示网络的通信线路所能传输的能力。带宽表示单位时间内从网络中某一点到另一点所能通过的“最高数据率”。   
+## 奈奎斯特定理与香农定理
+### 奈奎斯特定理
+极限码元传输速率为 2W 波特，其中 W 是理想低通信道的带宽。V表示每个码元离散电平的数目（**指有多少种码元**）   
+极限数据率为：  
+$$理想低通通道下的极限数据传输速率＝2log_{2}V$$   
+得出一些结论：    
+1. 在任何信道中，码元传输速率是有上限的。   
+2. 信道的频带越宽（即通过的信号高额分量越多），就可以用更高的速率进行码元的有效传输。   
+3. 奈式准则给出了码元传输的限制，但并未对信息传输速率给出限制。   
+### 香农定理  
+给出了带宽受限且有高斯白噪声干扰的信道的极限数据传输速率。   
+香农定理定义为：   
+$$信道的极限数据传输速率＝Wlog_{2}(1+\frac{S}{N})$$
+$$W通道带宽$$
+$$S信道所传输信号的平均功率$$
+$$N为信道内部的高斯噪声功率$$
+$$S／N 为信噪比$$  
+一些结论：   
+1. 信道的带宽或信道的信噪比越大，信息的极限传输速率越高。
+2. 对一定的传输带宽和一定的信噪比，信息传输速率的上限是确定的。
+3. 只要信息传输速率低于信道的极限传输速率，就能找到某种方法来实现无差错的传输。  
+4. 香农定理得出的是极限信息传输速率，实际信道的传输速率低于它不少。  
+## 编码与调制
+### 数字数据编码为数字信号
++ 归零编码
++ 非归零编码
++ 反向归零编码
++ 曼彻斯特编码
++ 差分曼彻斯特编码
++ 4B／5B编码
+## 数字数据调制为模拟信号
+1. 幅移键控
+2. 频移键控
+3. 相移键控
+4. 正交振幅调制
+## 模拟数据编码为数字信号
+1. 采样   
+对模拟信号进行周期性扫描，把时间上连续的信号变成时间上离散的信号。    
+2. 量化   
+把采样取得的的电平幅值按照一定的分级标度转化为对应的数字值并取整数。  
+3. 编码   
+编码是把量化的结果转换为与之对应的二进制编码。  
+## 电路交换，报文交换，分组交换
+### 电路交换
+分为三个阶段：连接建立，数据传输，连接释放。  
+在进行数据传输时，建立一条专用的物理连接路径，传输时一直被独占，知道通信结束。   
+优点：  
+1. 通信时延小
+2. 有序传输
+3. 没有冲突
+4. 使用范围广
+5. 实时性强
+6. 控制简单
+缺点：   
+1. 建立连接时间长
+2. 线路独占
+3. 灵活性差
+4. 难以规格化
+### 报文交换
+使用报文进行数据交换，报文包含目标地址，源地址等信息。   
+优点：  
+1. 无需建立连接。
+2. 动态分配线路
+3. 提高线路可靠性
+4. 提高线路利用率
+5. 提供多目标服务
+缺点：
+1. 对报文大小没有限制，要求网络节点有较大的缓存空间。
+2. 数据进入交换节点后要经历存储，转发这一过程，引起转发时延。  
+### 分组交换
+采用**存储转发**的方式
