--- a/计算机网络/物理层-通信基础.md
+++ b/计算机网络/物理层-通信基础.md
@@ -9,9 +9,9 @@
 **信源**是产生和发送数据的源头。信宿是接受数据的终点，它们通常都是计算机和其他数字终端装置。   
 **信道**与电路并不等同，信道是信号的传输媒介。一个信道可视为一条线路的逻辑部件，一般用来表示某个方向传送信息的介质，因此一条信道通常包含一条发送信道和一条接受信道。      
 交互方式：  
-1. 单向通信
-2. 半双工通信
-3. 全双工通信
+  1. 单向通信
+  2. 半双工通信
+  3. 全双工通信
 + 速率，波特与带宽   
 速率也称数据率，可以用码元传输速率和消息传输速率表示。  
 **码元传输速率**   
@@ -45,11 +45,31 @@ $$S／N 为信噪比$$
 4. 香农定理得出的是极限信息传输速率，实际信道的传输速率低于它不少。  
 ## 编码与调制
 ### 数字数据编码为数字信号
-+ 归零编码
-+ 非归零编码
-+ 反向归零编码
++ 归零编码   
+```
+  高电平 --> 1  
+  低电平 --> 0   
+```  
+提供了自同步机制。   
++ 非归零编码   
+`不用归零`   
+一个周期全部用来传输数据。难以同步   
++ 反向归零编码   
+```
+  信号翻转 --> 0   
+  信号保持不变 --> 1  
+``` 
+ 既能传输时钟信号又能不损失系统带宽。   
 + 曼彻斯特编码
+```
+将一个码元分成两个相等的间隔，前一个间隔为高电平而后一个间隔为低电平表示码元1，码元0与此表示相反。  
+```
+位中的跳变既可以作为时钟信号（同步），又作为数据信号，但它所占的频带宽度是原始基带宽度的两倍。  
 + 差分曼彻斯特编码
+```
+  若码元为1，则前半个码元的电平与上一码元的后半个电平相同，若码元为0，相反。  
+```
+每个码元中间都有一次电平跳转，可以实现自动同步，抗干扰性好。  
 + 4B／5B编码
 ## 数字数据调制为模拟信号
 1. 幅移键控
@@ -91,4 +111,32 @@ $$S／N 为信噪比$$
 1. 对报文大小没有限制，要求网络节点有较大的缓存空间。
 2. 数据进入交换节点后要经历存储，转发这一过程，引起转发时延。  
 ### 分组交换
-采用**存储转发**的方式
+采用**存储转发**，限制了每次传送的数据块的大小上限，把大的数据库划分为合理的小数据块。      
+优点：  
+1. 无建立时延
+2. 线路利用率高
+3. 简化了存储管理
+4. 加速传输
+5. 减少了出错概率和重发数据量。
+缺点：
+1. 存在存储转发时延。
+2. 需要传输额外信息量
+3. 当分组交换采用数据报服务时，可能会出现失序，丢失或重复分组。   
+## 数据报与虚电路
+### 数据报
+特点:
+1. 发送分组前不需要建立连接。
+2. 网络尽最大努力交付，传输不保证可靠性。  
+3. 发生的分组中要包含发送端和接受端的完整地址，以便可以独立传输。  
+4. 分组在交换节点存储转发时，需要排队等候处理，这会带来一定的时延。  
+5. 网络具有冗余路径，对故障的适应能力强，不会因为一个阶段故障导致整个网络崩溃。
+6. 存储转发的时延一般较小，提高了网络的吞吐量。
+7. 收发双方不独占某条链路，资源利用率高。  
+### 虚电路
+建立一个逻辑上的虚电路。  
+特点：  
+1. 虚电路通信链路的建立和拆除需要时间开销。
+2. 虚电路的路由选择体现在连接建立阶段，连接建立后，就确定了传输路径。
+3. 虚电路提供了可靠的通信功能，能保证每个分组正确且有序到达。  
+4. 虚电路有一个致命的缺点，即当网络的某个节点或某条链路出现故障而彻底失效时，所有经过该节点或该链路的虚电路都遭到破坏。  
+5. 分组首部不包含目的地址，包含的是虚电路标识符，开销小。  
