--- a/计算机网络/物理层－传输介质.md
+++ b/计算机网络/物理层－传输介质.md
@@ -14,6 +14,10 @@
 主要用来传输宽带信号，又称宽度同轴电缆。主要用于有线电视系统。  
 ### 光纤
 利用光导纤维（简称**光纤**）传输光脉冲来进行通信。   
+```
+有光脉冲 --> 1
+无光脉冲 --> 0
+```
 **带宽范围**极大。    
 + 多模光纤
 利用光的全反射特性，可以将从不同角度入射的多条光线在一根光纤里传输。   
@@ -22,6 +26,21 @@
 + 单模光纤
 光纤的直径减少到只有一个光的波长时，光纤就像一根波导一样，可是光线一直向前传播，而不会产生多次反射。    
 光源为定向性很好的半导体激光器，衰减较小。   
+
 特点：   
-1. 
+1. 传输损耗小，中继距离长，对远距离传输特别经济。
+2. 抗雷电和电磁干扰性能好。这在有大电流脉冲干扰的环境下尤为重要。
+3. 无串音干扰，保密性好，也不易被窃听或截取数据。
+4. 体积小，重量轻。这在现有电缆管道已拥塞不堪的情况下特别有利。
 ### 无线传输介质
+无线通信已广泛应用与移动电话领域，**构成蜂窝式无线电话网**。   
++ 无线电波   
+无线电波信号向所有方向散播，所以连接时无需对准某一方向。   
+无线电波具有很强的穿透能力，可以传输很长的距离。   
++ 微波，红外线和激光   
+需要发射方与接收方之间存在一条视线通路，有很强的方向性，都沿直线传播。   
+## 物理层接口的特性
+1. 机械特性。指明接口所用接线器的形状和尺寸，引脚数目和排列，固定和锁定装置等。    
+2. 电气特性。指明接口电路的各条线上出现的电压的范围。   
+3. 功能特性。指明某条线上出现的某一电平的电平的电压表示何种意义。   
+4. 过程特性，或称规程特性。指明对于不同功能的各种可能事件的出现顺序。       
