--- a/计算机网络/数据链路层－数据链路层的功能.md
+++ b/计算机网络/数据链路层－数据链路层的功能.md
@@ -1,1 +1,15 @@
-
+# 数据链路层－数据链路层的功能
+> xxx
+## 为网络层提供服务
+## 链路管理
+## 帧定界，帧同步与透明传输
+*两台主机之间传输信息时，必须将网络层的分组封装成帧，以帧的格式进行传送。将一段数据的前后分别添加首部和尾部，就构成了帧。* 帧长等于**数据部分的长度加上首部和尾部的长度**。       
++ 帧定界  
+首部和尾部中含有很多控制信息，它们的一个重要作用是确定帧的界限，即帧定界。   
++ 帧同步   
+帧同步指的是接收方应能从接收到的二进制比特流中区分出帧的起始与终止。    
+为了提高帧的传输效率，应当使帧的数据部分的长度尽可能地大于首部和尾部的长度，但每种数据链路层协议都规定了帧的数据部分的长度上限
+最大传送单元（MTU）。    
++ 透明传输   
+如果在数据中恰好出现与帧定节符相同的比特组合（会误以为“传输结束”而丢弃后面的数据），那么就要采取有效的措施解决这个问题，即**透明传输**。
+## 流量控制
