--- a/计算机网络/数据链路层－数据链路层的功能.md
+++ b/计算机网络/数据链路层－数据链路层的功能.md
@@ -1,6 +1,9 @@
 # 数据链路层－数据链路层的功能
-> xxx
+> 数据链路层在物理层提供服务的基础上向网络层提供服务，其主要作用是加强物理层传输原始始比特流的功能，将物理层提供的可能出错的物理连接改造为逻辑上无差错的数据链路，使之对网络层表现为一条无差错的链路。   
 ## 为网络层提供服务
++ 无确认的无连接服务  
++ 有确认的无连接服务  
++ 有确认的面向连接服务  
 ## 链路管理
 ## 帧定界，帧同步与透明传输
 *两台主机之间传输信息时，必须将网络层的分组封装成帧，以帧的格式进行传送。将一段数据的前后分别添加首部和尾部，就构成了帧。* 帧长等于**数据部分的长度加上首部和尾部的长度**。       
@@ -11,5 +14,21 @@
 为了提高帧的传输效率，应当使帧的数据部分的长度尽可能地大于首部和尾部的长度，但每种数据链路层协议都规定了帧的数据部分的长度上限
 最大传送单元（MTU）。    
 + 透明传输   
-如果在数据中恰好出现与帧定节符相同的比特组合（会误以为“传输结束”而丢弃后面的数据），那么就要采取有效的措施解决这个问题，即**透明传输**。
+如果在数据中恰好出现与帧定节符相同的比特组合（会误以为“传输结束”而丢弃后面的数据），那么就要采取有效的措施解决这个问题，即**透明传输**。   
+```mermaid
+classDiagram
+class HDLC标准帧{
+  标志F(01111110)
+  地址A（8位）
+  控制C（8位）
+  信息I（N位可变）
+  帧校验序列FCS（16位）
+  标志F(01111110)
+}
+```
 ## 流量控制
+因为有时会出现发送方的速度大于接收方的情况，如果不调整发送方的速度，在对于接收方很多帧会来不及处理。    
+流量控制实际上就是限制发送方的数据流量，使其发送速率不超过接收方的接受能力。   
+流量控制并不是数据链路层特有的功能，许多高层协议也提供此功能，只是控制的对象不同。   
+## 差错处理
+由于信道噪声等原因，帧在传输过程中可能会
