--- a/计算机网络/数据链路层－数据链路层的功能.md
+++ b/计算机网络/数据链路层－数据链路层的功能.md
@@ -8,6 +8,7 @@
 + 有确认的面向连接服务  
 帧传输过程分为三个阶段：建立数据链路、传输帧、释放数据链路。目的机器对收到的每一帧都要给出确认，源机器收到确认后才能发送下一帧，因而该服务的可靠性最高。     
 ## 链路管理
+数据链路层连接的建立，维持和释放的过程称为链路管理，它主要用于面向连接的服务。   
 ## 帧定界，帧同步与透明传输
 *两台主机之间传输信息时，必须将网络层的分组封装成帧，以帧的格式进行传送。将一段数据的前后分别添加首部和尾部，就构成了帧。* 帧长等于**数据部分的长度加上首部和尾部的长度**。       
 + 帧定界  
