--- a/计算机网络/数据链路层－组帧.md
+++ b/计算机网络/数据链路层－组帧.md
@@ -1,1 +1,8 @@
 # 数据链路层－组帧
+> 数据链路层之所以要把比特组合成帧为单位进行传输，是为了在出错时只重发出错的帧，而不必重发全部数据，从而提高效率。    
+> 组帧主要解决帧定界，帧同步，透明传输等。。。。。     
+## 字符计数法
+字符计数法是指在帧头部使用一个计数字段来标明帧内字符数。接收到字符计数值后，就可以之后后面跟了多少个    
+## 字符填充的首尾界符法
+## 零比特填充的首尾标志法
+## 违规编码法
