--- a/计算机网络/数据链路层－组帧.md
+++ b/计算机网络/数据链路层－组帧.md
@@ -1,8 +1,8 @@
 # 数据链路层－组帧
-> 数据链路层之所以要把比特组合成帧为单位进行传输，是为了在出错时只重发出错的帧，而不必重发全部数据，从而提高效率。    
-> 组帧主要解决帧定界，帧同步，透明传输等。。。。。     
+> 数据链路层之所以要把比特组合成帧为单位进行传输，是为了**在出错时只重发出错的帧**，而不必重发全部数据，从而提高效率。    
+> 组帧主要解决**帧定界，帧同步，透明传输**等。。。。。     
 ## 字符计数法
-字符计数法是指在帧头部使用一个计数字段来标明帧内字符数。接收到字符计数值后，就可以之后后面跟了多少个字节的数据，从而确定帧结束的位置。     
+字符计数法是指在**帧头部使用一个计数字段来标明帧内字符数**。接收到字符计数值后，就可以之后后面跟了多少个字节的数据，从而确定帧结束的位置。     
 ```
   一个帧5个字符       一个帧6个字符
 |--------------| |-----------------|
@@ -11,14 +11,17 @@
 一个问题：    
 如果计数字段出错，即失去帧边界划分的依据，那么接收方就无法判断传输帧的结束位和下一帧的开始位，收发双方将失去同步。   
 ## 字符填充的首尾界符法
-字符填充法使用特定字符来定界一帧的开始与结束。    
+字符填充法使用**特定字符**来定界一帧的开始与结束。    
 ```
 a: SOH A EOT ESC B EOT
 b: SOH A ESC EOT ESC ESC B EOT
 c: SOH A EOT ESC B EOT
 ```
 ## 零比特填充的首尾标志法
-零比特填充法允许数据帧包含任意个数的比特，也允许每个字符的编码包含任意个数的比特。它使用一个特定的模式，即`01111110`来标志一帧的开始和结束。    
+零比特填充法**允许数据帧包含任意个数的比特**，也**允许每个字符的编码包含任意个数的比特**。它使用一个特定的模式，即`01111110`来标志一帧的开始和结束。    
 为了不使信息位中出现的比特流0111110被误判为帧的首尾标志,发送方的数据链路层在信息位中遇到了5个连续的"1"时,将自动在其后插入一个0;而接收方做该过程的逆操作,即每收到了5个连
 个连续的"1"时,自动删除后面紧跟的"0",以恢复原信息。    
 ## 违规编码法
+在物理层进行比特编码时，通常采用违规编码法。   
+可以借用违规编码序列来定界帧的起始与终止。   
+只适用于采用冗余编码的特殊编码环境。   
