--- a/计算机网络/数据链路层－差错控制.md
+++ b/计算机网络/数据链路层－差错控制.md
@@ -5,7 +5,46 @@
 +  奇偶校验码   
 奇校验码和偶校验码的统称。    
 它由n-1位信息元和1位校验元组成,如果是奇校验码,那么在附加一个校验元后,码长为n的码字中"1"的个数为奇数;如果是偶校验码,那么在附加一个校验元以后,码长为n的码字中"1"的个数为偶数。    
-+  循环冗余码
++  循环冗余码   
 又称多项式码，任何一个由二进制数位串组成的代买都可以与一个之含有0和1两个系数的多项式建立一一对应关系。   
+```
+设一个帧为m位，其对应的多项式为M(x)
+1. 加0。设G(x)的阶为r，在帧的低位端加上r个0。    
+2. 模2除法。异或操作。   
+例如：G(x)=1100 M=101011
+      11001
+      _________
+ 1100|101011000
+      1100
+      ---------
+       1101
+       1100
+       ---------
+         0011
+         0000
+         ----------
+          0110
+          0000
+          ---------
+           1100
+           1100
+           ---------
+             000
+M=101011000
+R=000
+Q=11001
+```
 ## 纠错编码
-+ 海明码
+> 在数据通信的过程中，解决差错问题的一种方法是在每个要发送的数据块上附加足够的冗余信息，使接收方能够推导出发送方实际送出的应该是什么样的比特串。    
++ 海明码   
+1. 确定海明码的位数   
+n为有效信息的位数，k为校验位的位数，这信息位n和校验位k应满足：     
+$$n+k \leq 2_{k}-1$$
+3. 确定校验性的分布    
+$P_{1}$ 的海明码位号 $2_{i-1} = 2_{0} = 1$ ，即 $H_{1}为P_{1}$    
+$P_{2}$ 的海明码位号 $2_{i-1} = 2_{1} = 2$ ，即 $H_{2}为P_{2}$    
+$P_{3}$ 的海明码位号 $2_{i-1} = 2_{2} = 4$ ，即 $H_{4}为P_{3}$    
+5. 分组以形成校验关系   
+被校验的数据位的海明位号＝校验该数据位的个海明位之和。   
+7. 校验位取值     
+校验位 $P_{i}$ 为第i组（由该校验位校验的数据位）所有位求异或。   
