--- a/计算机网络/数据链路层－流量控制和可靠传输机制.md
+++ b/计算机网络/数据链路层－流量控制和可靠传输机制.md
@@ -6,3 +6,29 @@
 在任意时刻，发送方都维持一组连续的允许发送的帧的信号，称为**发送窗口**；同时接收方也维持一组连续的允许接受帧的序号，成为**接受窗口**。  
 发送窗口的大小 $W_{T}$ 代表还未收到对方确认信息的情况下最多可以发送多少个数据帧。   
 接受窗口是为了控制可以接受哪些数据帧和不可以接受哪些数据帧。    
+**重要特性：**    
+停止－等待协议：发送窗口大小＝1，接受窗口＝1   
+后退N帧协议：发送窗口>1，接受窗口＝1    
+选择重传协议：发送窗口>1，接受窗口>1    
+  1. 只有接受窗口向前滑动（同时接收方发送了确认帧）时，发送窗口才有可能（只有发送方收到确认帧后才一定）向前滑动。    
+  2. 接受窗口为1时，可以保证帧的有序接受。   
+  3. 数据链路层的滑动窗口协议中，窗口的大小在传输中是固定的。      
++ 可靠传输协议   
+使用确认和超时重传两种机制完成。   
+确认是一种无数据的控制帧。    
+超时重传是指发送方在发送某个数据帧后就开启一个计数器。在一定时间内如果没有得到发送的数据帧的确认帧，那就重发。   
+## 后退N帧协议（GBN）   
+在后退N帧式ARQ中，发送方无须在收到上一个帧的ACK 后才能开始发送下一帧，而是可以连续发送帧。但接收方检测出失序的信息帧后，**要求发送方重发最后一个正确接收的信息帧走的所有未被确认的帧。**       
+发送窗口尺寸 $W_{T} \le 2^n-1$   
+**接收方只允许按顺序接受帧。**    
+对某一数据帧的确认就表明该数据帧和此前所有的数据帧均已正确无误的收到，称为累积确认。    
+## 多帧滑动窗口与选择重传协议(SR)   
+
+## 其他
+**信道效率**是对发送方而言的，是指发送方在一个发送周期的时间内，有效地发送数据所需要的时间占整个发送周期的比率。    
+发送方从开始发送数据到收到第一个确认帧为止，称为一个发送周期，T。发送方在这个周期内共发送L比特的数据，发送方的数据传输效率为C，这发送方用于发送有效数据的时间为L／C，在这种情况下，信道的利用率为 $(L/C)/T$         
+求信道的利用率只要求周期时间T和有效数据发送时间 $L/C$。    
+
+$$
+信道吞吐率＝信道利用率\times发送法的发送速率
+$$
