--- a/计算机网络/数据链路层－流量控制和可靠传输机制.md
+++ b/计算机网络/数据链路层－流量控制和可靠传输机制.md
@@ -23,7 +23,7 @@
 **接收方只允许按顺序接受帧。**    
 对某一数据帧的确认就表明该数据帧和此前所有的数据帧均已正确无误的收到，称为累积确认。    
 ## 多帧滑动窗口与选择重传协议(SR)   
-
+当接收方发现某帧出错后，其后继续送来的正确的帧虽然不能立即递交给接收方的高层，但接收方仍可收下来，存放在一个缓冲区中，同时要求发送方重新传送出错的那一帧。一旦收到重新传来的帧后，就可以将已存于缓冲区中的其余帧一并按正确的顺序递交上一层。     
 ## 其他
 **信道效率**是对发送方而言的，是指发送方在一个发送周期的时间内，有效地发送数据所需要的时间占整个发送周期的比率。    
 发送方从开始发送数据到收到第一个确认帧为止，称为一个发送周期，T。发送方在这个周期内共发送L比特的数据，发送方的数据传输效率为C，这发送方用于发送有效数据的时间为L／C，在这种情况下，信道的利用率为 $(L/C)/T$         
