更新期末－机械制造基础

--- a/机械制造基础/机械制造基础.md
+++ b/机械制造基础/机械制造基础.md
@@ -12,6 +12,7 @@
     - [切屑的类型](#切屑的类型)
     - [刀具磨损与刀具寿命](#刀具磨损与刀具寿命)
     - [刀具磨损过程及磨钝标准](#刀具磨损过程及磨钝标准)
+    - [切削三要素与四个结论](#切削三要素与四个结论)
   - [金属切削机床](#金属切削机床)
     - [机床的工艺范围](#机床的工艺范围)
     - [机床型号的编制](#机床型号的编制)
@@ -115,6 +116,26 @@ B区最大值为理论磨损极限。
 
 2. 正常磨损阶段。  
 3. 急剧磨损阶段。  
+
+### 切削三要素与四个结论
+
+**切削三要素**   
+1. 进给量
+$$f$$
+2. 切削速度
+$$v$$
+1. 背吃刀量
+$$a_{p}$$
+
+**四个结论**   
+1. 切削用量三要素对切削力的影响由大到小的顺序为
+$$ap－f－v$$
+2. 切削用量三要素对切削热的影响顺序为
+$$ap-v-f$$
+3. 切削用量三要素对切削温度的影响由大到小的顺序为
+$$v-f-ap$$
+4. 切削用量三要素对刀具寿命影响的大小按顺序为  
+$$v—f—ap$$
 
 ## 金属切削机床
 
