--- a/高等数学/多元函数微分学.md
+++ b/高等数学/多元函数微分学.md
@@ -1,6 +1,3 @@
-660
----
-
 # 多元函数微分学
 
 > 填空题 序号：85，86，87，88，89，90，91，92，93，84，95，96，98，98，99，100，101，102，103，104，105
@@ -16,7 +13,6 @@
   - [方法](#方法)
     - [变上限积分的求导法则](#变上限积分的求导法则)
     - [先带后求](#先带后求)
-  - [660](#660-1)
 
 ## 思维导图
 ```mermaid
@@ -101,7 +97,4 @@ $$
 ### 先带后求
 可以先将已知的数带入，方便进行后续的计算。   
 
-还需要做的: **85,88,90,92,93,94,96,97,98,99,100,103,105**
-
-660
----
+还需要做的: **85,88,90,92,93,94,96,97,98,99,100,103,105*
